--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body{
     width: 70%;
     width: 70%;
     height: 45px;
-    font-family: 'Poppins',sans-serif;
+    font-family: 'Tangerine',sans-serif;
     font-size: 15px;
     border: 2px solid #d1d3d4;
     padding: 12px;
