--- a/style.css
+++ b/style.css
@@ -22,48 +22,6 @@ body{
     left: 50%;
     padding: 30px 40px;
 }
-#title input{
-    width: 70%;
-    width: 70%;
-    height: 45px;
-    font-family: 'Roboto Slab',sans-serif;
-    font-size: 15px;
-    border: 2px solid #d1d3d4;
-    padding: 12px;
-    color: #111111;
-    font-weight: 500;
-    position: relative;
-    border-radius: 5px;
-
-}
-#desc input{
-    width: 70%;
-    width: 70%;
-    height: 45px;
-    font-family: 'Roboto Slab',sans-serif;
-    font-size: 15px;
-    border: 2px solid #d1d3d4;
-    padding: 12px;
-    color: #111111;
-    font-weight: 500;
-    position: relative;
-    border-radius: 5px;
-
-}
-#dt input{
-    width: 70%;
-    width: 70%;
-    height: 45px;
-    font-family: 'Roboto Slab',sans-serif;
-    font-size: 15px;
-    border: 2px solid #d1d3d4;
-    padding: 12px;
-    color: #111111;
-    font-weight: 500;
-    position: relative;
-    border-radius: 5px;
-
-}
 #newtask{
     position: relative;
     background-color: #ffffff;
@@ -75,7 +33,7 @@ body{
     width: 70%;
     width: 70%;
     height: 45px;
-    font-family: 'Roboto Slab',sans-serif;
+    font-family: 'Poppins',sans-serif;
     font-size: 15px;
     border: 2px solid #d1d3d4;
     padding: 12px;
@@ -95,7 +53,7 @@ body{
     width: 20%;
     height: 45px;
     border-radius: 5px;
-    font-family: 'Roboto Slab',sans-serif;
+    font-family: 'Poppins',sans-serif;
     font-weight: 500;
     font-size: 16px;
     background-color: #8052ec;
@@ -125,7 +83,7 @@ body{
     cursor: pointer;
 }
 .task span{
-    font-family: 'Roboto Slab',sans-serif;
+    font-family: 'Poppins',sans-serif;
     font-size: 15px;
     font-weight: 400;
 }
