--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ body{
     width: 100%;
     position: relative;
 }
-.task{
+.task1{
     background-color: #ffffff;
     height: 50px;
     padding: 5px 10px;
@@ -163,12 +163,12 @@ body{
     border-bottom: 2px solid #d1d3d4;
     cursor: pointer;
 }
-.task span{
+.task1 span{
     font-family: 'Poppins',sans-serif;
     font-size: 15px;
     font-weight: 400;
 }
-.task button{
+.task1 button{
     background-color: #8052ec;
     color: #ffffff;
     height: 100%;
@@ -178,6 +178,59 @@ body{
     cursor: pointer;
     outline: none;
 }
+.task2{
+    background-color: #ffffff;
+    height: 50px;
+    padding: 5px 10px;
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 2px solid #d1d3d4;
+    cursor: pointer;
+}
+.task2 span{
+    font-family: 'Poppins',sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+}
+.task2 button{
+    background-color: #8052ec;
+    color: #ffffff;
+    height: 100%;
+    width: 40px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    outline: none;
+}
+.task3{
+    background-color: #ffffff;
+    height: 50px;
+    padding: 5px 10px;
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 2px solid #d1d3d4;
+    cursor: pointer;
+}
+.task3 span{
+    font-family: 'Poppins',sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+}
+.task3 button{
+    background-color: #8052ec;
+    color: #ffffff;
+    height: 100%;
+    width: 40px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    outline: none;
+}
+
 .completed{
     text-decoration: line-through;
 }
